# PYSimilis

./: PYSimilis.py  pyproject.toml
.github/workflows/: main.yml  release.yml
Imager/src/: PySimilis.py
pysimilis/: main.py
